--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 <body>
 	<div id="board" class="board">
     <h1>Kanban board</h1>
-    <button class="create-column">Add a column</button>
+    <button class="create-column bigger">Add column</button>
     <div class="column-container">
-      <script id="column-template" class="toFlex" type="x-tmpl-mustache">
+      <script id="column-template" type="x-tmpl-mustache">
           <div class="column">
             <h2 class="column-title">{{ name }}</h2>
             <ul id={{ id }} class="column-card-list"></ul>
-            <button class="btn-delete">X</button>
-            <button class="add-card">Add a card</button>
-          </div>
+            <button class="add-card big">add card</button>
+            <button class="btn-delete">delete column</button>
+            
+          </div>  
       </script>
       <script id="card-template" type="x-tmpl-mustache">
         <div class="card">
           <p class="card-description">{{ description }}</p>
-          <button class="btn-delete">x</button>
+          <button class="btn-delete">delete</button>
         </div
       </script>
     </div>
