--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="board" class="board">
-    <h1>Kanban board</h1>
+    <h1>Kanban board</br> made by Adam Nelip</h1>
     
     <div class="column-container">
       <script id="column-template" type="x-tmpl-mustache">
